# werewolf-arena-green-agent

./: __main__.py  dockerfile  pyproject.toml
.github/workflows/: publish.yml
greenAgent/: README.md  __main__.py  dockerfile  pyproject.toml
greenAgent/lib/: agent_card.py  executor.py
greenAgent/models/: Message.py  Participant.py
greenAgent/models/enum/: Phase.py  Role.py  Status.py
greenAgent/src/: prompts.py
greenAgent/src/a2a/: agent.py  agent_card.py  executor.py  skills.py
greenAgent/src/evaluation/: scoring.py
greenAgent/src/game/: Game.py  GameData.py  analytics.py
greenAgent/src/models/: Elimination.py  EvalRequest.py  Event.py  Game.py  GameData.py  Vote.py
greenAgent/src/models/abstract/: Phase.py
greenAgent/src/models/enum/: EliminationType.py  EventType.py
greenAgent/src/phases/: bidding.py  discussion.py  game_end.py  night.py  round_end.py  voting.py
greenAgent/tests/: conftest.py  test_bidding.py  test_debate.py  test_round_end.py
src/a2a/: agent.py  messenger.py
src/evaluation/: scoring.py
src/game/: AgentState.py  Game.py  analytics.py
src/models/: EvalRequest.py  Participant.py
src/phases/: bidding.py  debate.py  night.py  round_end.py  voting.py
